--- a/src/UserInterface/Test/Pages/_ViewImports.cshtml
+++ b/src/UserInterface/Test/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Test
-@namespace Test.Pages
+@using SecretMadonna.Test.TestUI
+@namespace SecretMadonna.Test.TestUI.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
