--- a/src/UserInterface/TestPrj.MvcUI/Views/_ViewImports.cshtml
+++ b/src/UserInterface/TestPrj.MvcUI/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using SecretMadonna.TestPrj.MvcUI
-@using SecretMadonna.TestPrj.MvcUI.Models
+@using SecretMadonna.TestPrj.MvcUI.Vos
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
